# FNote-v3

./: .gcignore  .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js  vite.config.ts
src/: App.tsx  app.css  app.html  index.css  store.ts  types.ts
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/src/: commands.rs  library.rs  main.rs  models.rs  player.rs  state.rs
src-tauri/src/commands/: library.rs  mod.rs  playback.rs
src-tauri/src/player/: mod.rs
src/components/: LibraryView.tsx  PlayerControls.tsx  Sidebar.tsx
src/hooks/: useTauriCommands.ts  useTauriEvents.ts
src/lib/: store.ts  types.ts
src/lib/components/: MainView.svelte  PlayerControls.svelte  Sidebar.svelte
src/lib/components/controls/: CurrentSongInfo.svelte  PlaybackControls.svelte  ProgressBar.svelte  VolumeBar.svelte
src/lib/components/main_view/: AlbumArt.svelte  Header.svelte
src/lib/components/sidebar/: SkeletonMenus.svelte  SongList.svelte  UploadButton.svelte
src/lib/stores/: playerStore.ts
src/lib/types/: index.ts
src/routes/: +layout.svelte  +page.svelte
