[package]
name = "fnote"
version = "0.1.0"
description = "FNote Music Player"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-read-file", "shell-open", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rodio = { version = "0.17", features = ["mp3"] }
anyhow = "1.0"
lofty = "0.18"
rfd = { version = "0.14", default-features = false, features = ["xdg-portal"] }
base64 = "0.21"
walkdir = "2"
rand = "0.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
