[package]
name = "fnote"
version = "0.1.0"
description = "A Music Player App"
authors = ["zqil"]
license = "MIT"
repository = ""
edition = "2021"

# Explicitly define the binary target
[[bin]]
name = "fnote"
path = "main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# Optimization settings for the release build to reduce binary size
[profile.release]
panic = "abort"         # Abort on panic
codegen-units = 1       # Reduce compile time parallelism for better optimization
lto = true              # Enable Link-Time-Optimization
opt-level = "s"         # Optimize for size
strip = true            # Strip symbols from the binary
